# Paradexx

./: .editorconfig  .env.backup  .env.example  .env.production.template  .gitignore  .prettierignore  .prettierrc  .railwayignore  .replit  CONTRIBUTING.md  FIXES_AND_ENHANCEMENTS.md  FRONTEND-PAGES-LIST.md  GUARDIAVAULT_INTEGRATION.md  LICENSE  MEV_INTEGRATION_SUMMARY.md  MEV_PROTECTION_INTEGRATION.md  PLATFORM_GUIDE.md  PRICING_UPDATE_DEC2025.md  PRO_USER_PAGE_INTEGRATION.md  README (2).md  README.md  SCARLETTE_INTEGRATION.md  SERVICE_INTEGRATION_COMPLETE.md  TRADING_BUY_FIXES.md  TYPESCRIPT_ESLINT_FIXES_SUMMARY.md  UI-UX-COMPONENTS-LIST.md  capacitor.config.js  capacitor.config.ts  docker-compose.local.yml  docker-compose.override.yml  docker-compose.simple.yml  eslint.config.js  index (2).html  index.html  netlify.toml  nixpacks.toml  package (2).json  package.json  pnpm-lock (2).yaml  pnpm-lock.yaml  (+15 more)
GuardiaVault-main/: .editorconfig  .eslintignore  .npmrc  .prettierignore  (+49 more)
crosschain service/: COMPREHENSIVE_ANALYSIS.md  ENTERPRISE_DEPLOYMENT.md  INTEGRATION_ARCHITECTURE.md  QUICK_START_IMPLEMENTATION.md  README.md  SECURITY_FEATURES.md  WALLET_INTEGRATION_ANALYSIS.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  pytest.ini  start-standalone-service.sh
crosschain service/examples/: security_demo.py
crosschain service/k8s/: configmap.yaml  deployment.yaml  ingress.yaml  pvc.yaml  services.yaml
crosschain service/monitoring/: prometheus.yml
crosschain service/monitoring/rules/: bridge_security.yml
crosschain service/nginx/: nginx.conf
crosschain service/scripts/: deploy_enterprise.sh
crosschain service/src/: __init__.py
crosschain service/src/api/: main.py
crosschain service/src/api/routes/: bridge.py  transaction.py
crosschain service/src/core/: attestation_monitor.py  ml_anomaly_detection.py  performance_optimization.py  proof_of_reserves.py  security_monitor.py
crosschain service/src/models/: contract.py  network.py  vulnerability.py
crosschain service/src/utils/: contract_utils.py
crosschain service/tests/: test_api_routes.py  test_bridge_analyzer.py  test_security_features.py  test_utils.py
mevguard service/unified-mempool-system/: CONTRIBUTING.md  INTEGRATION_TESTING_GUIDE.md  Makefile  QUICK_START_INTEGRATION.md  STANDALONE_REPOSITORY_SUMMARY.md  WORLD_CLASS_SUMMARY.md  docker-compose.yml  init-db.sql  pyproject.toml  setup.py  simple_health_server.py  start_world_class_mempool.py  test_services.py
mevguard service/unified-mempool-system/api/: unified_mempool_service.py
mevguard service/unified-mempool-system/config/: config.yaml
mevguard service/unified-mempool-system/core/: __init__.py  unified_mempool_engine.py
mevguard service/unified-mempool-system/docs/: api-reference.md
mevguard service/unified-mempool-system/examples/: integration_example.py
mevguard service/unified-mempool-system/redis/: redis.conf
mevguard service/unified-mempool-system/src/unified_mempool/: __init__.py
mevguard service/unified-mempool-system/src/unified_mempool/mempool-core/: mempool_service.py
mevguard service/unified-mempool-system/src/unified_mempool/mempool-core/app/: env.example  main_launcher.py  test_database_api.py
mevguard service/unified-mempool-system/src/unified_mempool/mempool-core/app/api/: __init__.py  main.py
mevguard service/unified-mempool-system/src/unified_mempool/mempool-core/app/config/: __init__.py
mevguard service/unified-mempool-system/src/unified_mempool/mempool-core/app/core/: session_manager.py  utils.py
mevguard service/unified-mempool-system/src/unified_mempool/mempool-core/app/execution/: execution_engine.py
mevguard service/unified-mempool-system/src/unified_mempool/mempool-core/app/mev_analysis/: mev_detector.py
mevguard service/unified-mempool-system/src/unified_mempool/mempool-core/app/scripts/: start.sh
mevguard service/unified-mempool-system/src/unified_mempool/mempool-ingestor/: smart_ingestor.py
mevguard service/unified-mempool-system/src/unified_mempool/mempool-legacy/filter_engine/: compiler.py
mevguard service/unified-mempool-system/src/unified_mempool/models/: __init__.py
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/: .env.scanner.example  docker-compose-ultimate-scanner.yml  docker-entrypoint.sh  init_database.py  main.py  test_enterprise_integration.py  test_integration.py  test_simple.py  unified_integration.py
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/config/: enterprise-config.yaml  redis.conf  unified-config-clean.yaml
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/database/scanner-init/: 01-schema.sql
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/monitoring/prometheus/: prometheus.yml
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/monitoring/scanner-prometheus/: scanner_alerts.yml
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/nginx/: nginx.conf  scanner-nginx.conf
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/scripts/: run-quantum-monitor.ps1  setup-directories.ps1
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/src/api/: enterprise_api.py
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/src/database/: __init__.py  models.py
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/src/detection/: __init__.py  advanced_detector.py  quantum_detector.py
mevguard service/unified-mempool-system/src/unified_mempool/quantum-mempool/src/enterprise/: __init__.py  audit_logger.py  compliance_manager.py  security_manager.py
mevguard service/unified-mempool-system/src/unified_mempool/utils/: __init__.py
scarlette service/: Dockerfile  STANDALONE_REPOSITORY_SUMMARY.md  pyproject.toml  pytest.ini  requirements-dev.txt
scarlette service/src/scarlette_ai/: __init__.py  blockchain_knowledge_base.py  conversation_manager.py  main.py
scarlette service/tests/: conftest.py
(+2067 files in other folders)
