[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scarlette-ai-service"
version = "1.0.0"
description = "Advanced Blockchain Security AI Assistant"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Scarlette AI Team", email = "team@scarlette-ai.com"}
]
maintainers = [
    {name = "Scarlette AI Team", email = "team@scarlette-ai.com"}
]
keywords = [
    "ai",
    "blockchain", 
    "security",
    "defi",
    "smart-contracts",
    "cryptocurrency",
    "api",
    "fastapi"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security :: Cryptography",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.104.1,<0.120.0",
    "uvicorn[standard]>=0.24.0,<0.30.0",
    "websockets>=12.0,<13.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "redis[hiredis]>=5.0.1,<6.0.0",
    "httpx>=0.25.2,<0.28.0",
    "aiohttp>=3.9.1,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "aiofiles>=23.2.1,<25.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "structlog>=23.2.0",
    "prometheus-client>=0.19.0",
    "cryptography>=41.0.8",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "click>=8.1.0"
]

[project.optional-dependencies]
ai = [
    "openai>=1.3.7,<2.0.0",
    "transformers>=4.35.2,<5.0.0", 
    "torch>=2.1.1,<3.0.0",
    "accelerate>=0.24.1",
    "sentencepiece>=0.1.99"
]
blockchain = [
    "web3>=6.11.3",
    "eth-account>=0.9.0",
    "eth-utils>=2.2.0"
]
analytics = [
    "numpy>=1.24.3",
    "pandas>=2.1.4"
]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0", 
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
    "pre-commit>=3.5.0"
]
all = [
    "scarlette-ai-service[ai,blockchain,analytics]"
]

[project.urls]
Homepage = "https://github.com/your-org/scarlette-ai-service"
Documentation = "https://docs.scarlette-ai.com"
Repository = "https://github.com/your-org/scarlette-ai-service"
"Bug Tracker" = "https://github.com/your-org/scarlette-ai-service/issues"

[project.scripts]
scarlette-ai = "scarlette_ai.main:main"
scarlette = "scarlette_ai.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scarlette_ai = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "openai.*",
    "transformers.*",
    "torch.*"
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]